--- a/instagram-clone/src/App.css
+++ b/instagram-clone/src/App.css
@@ -4,6 +4,7 @@
 
 .app{
   background-color: #fafafa;
+  align-items: center;
 }
 
 .app__header{
@@ -11,11 +12,21 @@
   padding:20px;
   object-fit: contain;
   border-bottom: 1px solid lightgrey;
+  display: flex;
+  justify-content: space-between;
+}
+
+.app__headerImage{
+object-fit: contain;
 }
 
 .app__signup{
   display: flex;
   flex-direction: column;
+}
+
+.app__posts{
+  padding: 20px;
 }
 
 input{
