--- a/instagram-clone/src/Post.css
+++ b/instagram-clone/src/Post.css
@@ -1,30 +1,64 @@
-.post{
-    max-width: 500px;
-    background-color: white;
-    border: 1px solid lightgray;
-    margin-bottom: 45px;
+.post {
+  max-width: 500px;
+  background-color: white;
+  border: 1px solid lightgray;
+  margin-bottom: 15px;
+  object-fit: contain;
+  margin: 5px;
 }
 
 .post__image {
-    width: 100%;
-    object-fit: contain;
-    border-top: 1px solid lightgray;
-    border-bottom: 1px solid lightgray;
-
+  width: 100%;
+  object-fit: contain;
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+  /* height: ; */
+}
+img {
+  max-height: 350px;
 }
 
-.post__text{
-    font-weight: normal;
-    padding:20px;
-
+.post__text {
+  font-weight: normal;
+  padding: 15px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  border-bottom: 1px solid lightgray;
 }
 
-.post__header{
-    display: flex;
-    align-items: center;
-    padding:20px;
+.post__header {
+  display: flex;
+  align-items: center;
+  padding: 20px;
 }
 
-.post_avatar{
-    margin-right: 10px;
+.post_avatar {
+  margin-right: 10px;
+}
+
+.post__commentBox {
+  display: flex;
+  margin: 6px;
+}
+
+.post__input {
+  flex: 1;
+  align-items: center;
+  border: none;
+  padding: 5px;
+  outline: none;
+  /* border-top: 2px solid lightgray; */
+}
+
+.post__button {
+  flex: 0;
+  border-top: 30px solid lightgray;
+  background-color: transparent;
+  color:#6082a3;
+  border: none;
+}
+
+button:enabled{
+    color:#0095F7;
+    cursor: grab;
 }
