--- a/instagram-clone/src/Post.css
+++ b/instagram-clone/src/Post.css
@@ -20,10 +20,8 @@ img {
 
 .post__text {
   font-weight: normal;
-  padding: 15px;
-  margin-bottom: 10px;
-  font-size: 20px;
-  border-bottom: 1px solid lightgray;
+  padding: 10px;
+  font-size: 18px;
 }
 
 .post__header {
@@ -47,18 +45,27 @@ img {
   border: none;
   padding: 5px;
   outline: none;
-  /* border-top: 2px solid lightgray; */
 }
-
+.caption {
+  margin: 0;
+  padding: 0;
+}
 .post__button {
   flex: 0;
   border-top: 30px solid lightgray;
   background-color: transparent;
-  color:#6082a3;
+  color: #6082a3;
   border: none;
 }
 
-button:enabled{
-    color:#0095F7;
-    cursor: grab;
+button:enabled {
+  color: #0095f7;
+  cursor: grab;
+}
+
+.post__comments {
+  font-weight: normal;
+  padding: 10px;
+  padding-bottom: 13px;
+  font-size: 18px;
 }
