--- a/instagram-clone/src/App.css
+++ b/instagram-clone/src/App.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  object-fit: contain;
 }
 
 .app {
@@ -50,4 +51,9 @@
 input {
   padding: 5px;
   margin: 5px;
+}
+
+.button__reload {
+  display: flex;
+  flex-direction: column;
 }
